--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^5.0.1",
     "cors": "^2.8.5",
+    "create-react-class": "^15.7.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.9.0",
@@ -12,6 +13,8 @@
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
