--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap-date-picker": "^5.1.0",
     "react-datepicker": "^4.1.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
