--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "react-datepicker": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-minimal-side-navigation": "^1.8.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-sticky-footer": "0.1.0-rc3",
+    "rsuite": "^4.10.2",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
