--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rsuite": "^4.10.2",
     "styled-components": "^5.3.0"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
